-
Bug
-
Resolution: Done
-
P2: Important
-
5.6
-
None
-
Windows (10), MSVC
-
4025a05c64100b13615f856ac0b403b3623a5cf4
Regression introduced by d44a327da4a956f62cc0d51095fa4c1d62e130d3.
Can be reproduced with example from QTBUG-53079
- resulted from
-
QTBUG-53079 QML Video crashed when it is (un)loaded from Loader
-
- Closed
-
For Gerrit Dashboard: QTBUG-55264 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
168496,3 | DirectShow: Restore negotiation of sample type in the io filter | 5.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |