DirectShow: Restore negotiation of sample type in the io filter

This functionality was removed in d44a327da4a956f62cc0d51,
but is still needed, as we need to negotiate the media type
with the input pin; even if we limit the scope to streaming
types.

Task-number: QTBUG-55264
Change-Id: I7cc02c5ea17cca9912c29c40813314b04b91bd18
Reviewed-by: Yoann Lopes <yoann.lopes@qt.io>